{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 96,
  "lineage": "149b91b4-fd51-7bc6-e9ee-5ba399c5030c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8263a10e73c3e2a",
            "arn": "arn:aws:ec2:ap-south-1:448049834082:elastic-ip/eipalloc-0c8263a10e73c3e2a",
            "association_id": "eipassoc-04ec965a5f871d41f",
            "domain": "vpc",
            "id": "eipalloc-0c8263a10e73c3e2a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-098cc1c4be330dd12",
            "private_dns": "ip-10-0-1-199.ap-south-1.compute.internal",
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-13-201-111-106.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.111.106",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "xyz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca570c1b6d79f36",
            "arn": "arn:aws:ec2:ap-south-1:448049834082:instance/i-094283d34fb648e0b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094283d34fb648e0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "12-dec",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-030f35fde5fe6d09f"
              }
            ],
            "primary_network_interface_id": "eni-030f35fde5fe6d09f",
            "private_dns": "ip-10-0-1-100.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-13-126-51-100.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.51.100",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-080cfe04f43650c89",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03eeb49ae2dfd64b9",
            "tags": {
              "Name": "deployHub-instance"
            },
            "tags_all": {
              "Name": "deployHub-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7ebbdda047f0ddc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "448049834082",
            "id": "i-094283d34fb648e0b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_deployhHub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:448049834082:internet-gateway/igw-0801fb92de9b59f8c",
            "id": "igw-0801fb92de9b59f8c",
            "owner_id": "448049834082",
            "region": "ap-south-1",
            "tags": {
              "Name": "deployHub-IGW"
            },
            "tags_all": {
              "Name": "deployHub-IGW"
            },
            "vpc_id": "vpc-0f88843eea310d425"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8263a10e73c3e2a",
            "association_id": "eipassoc-04ec965a5f871d41f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b60e081c8d05bb0a",
            "network_interface_id": "eni-098cc1c4be330dd12",
            "private_ip": "10.0.1.199",
            "public_ip": "13.201.111.106",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03eeb49ae2dfd64b9",
            "tags": {
              "Name": "deployHub-nat-gateway"
            },
            "tags_all": {
              "Name": "deployHub-nat-gateway"
            },
            "vpc_id": "vpc-0f88843eea310d425"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_deployhHub",
            "aws_subnet.public_subnet",
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:448049834082:route-table/rtb-0395ceae60616a7a4",
            "id": "rtb-0395ceae60616a7a4",
            "owner_id": "448049834082",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b60e081c8d05bb0a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f88843eea310d425"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "448049834082",
            "id": "rtb-0395ceae60616a7a4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_deployhHub",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:448049834082:route-table/rtb-0568ce4e2b78f748c",
            "id": "rtb-0568ce4e2b78f748c",
            "owner_id": "448049834082",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0801fb92de9b59f8c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f88843eea310d425"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "448049834082",
            "id": "rtb-0568ce4e2b78f748c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_deployhHub",
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064ace7e8a8d76e6c",
            "region": "ap-south-1",
            "route_table_id": "rtb-0395ceae60616a7a4",
            "subnet_id": "subnet-053969223efd2d032"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw_deployhHub",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b39af925fc95ee8e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0568ce4e2b78f748c",
            "subnet_id": "subnet-03eeb49ae2dfd64b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_deployhHub",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:448049834082:subnet/subnet-053969223efd2d032",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053969223efd2d032",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "448049834082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0f88843eea310d425"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "448049834082",
            "id": "subnet-053969223efd2d032",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:448049834082:subnet/subnet-03eeb49ae2dfd64b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eeb49ae2dfd64b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448049834082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0f88843eea310d425"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "448049834082",
            "id": "subnet-03eeb49ae2dfd64b9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.deployHub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "deployHub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:448049834082:vpc/vpc-0f88843eea310d425",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04359126b5c71170d",
            "default_route_table_id": "rtb-07db92fdf8bc6ea2e",
            "default_security_group_id": "sg-0a7ebbdda047f0ddc",
            "dhcp_options_id": "dopt-0d16510ad562f02c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f88843eea310d425",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07db92fdf8bc6ea2e",
            "owner_id": "448049834082",
            "region": "ap-south-1",
            "tags": {
              "Name": "deployHub-vpc"
            },
            "tags_all": {
              "Name": "deployHub-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "448049834082",
            "id": "vpc-0f88843eea310d425",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}